# automatizacion-sri-facturas

./: .gitignore  LICENSE  README.md  datos.json.example  main.py  pyproject.toml
src/pantallas/emision_facturas/: factura.py  ids.py
src/pantallas/login/: ids.py  login.py
src/utilidades/: cli_options.py  comun.py  utilidades.py
