[tool.poetry]
name = "automatizacion-sri-facturas"
version = "0.1.0"
description = "Automatización de la creación de facturas en 'SRI & Yo en Línea' de Ecuador usando python y selenium"
authors = ["luisprgr"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
