[project]
name = "automatizacion-sri-facturas"
version = "0.2.0"
description = "Automatización de la creación de facturas en 'SRI & Yo en Línea' de Ecuador usando python y selenium"
authors = [{ name = "luisprgr" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium>=4.29.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"
